--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-    <title>Mastodon/Pinafore Lite Loading...</title>
-    <meta http-equiv="refresh" content="0; url=https://pinafore.social/">
+    <title>Mastodon/Phanpy Loading...</title>
+    <meta http-equiv="refresh" content="0; url=https://phanpy.social/">
 </head>
 <body>
     <h1>Loading...</h1>
